[package]
name = "tokio"
version = "1.43.0"
edition = "2021"

[dependencies]
real_tokio = { git = "https://github.com/MystenLabs/tokio-msim-fork.git", rev = "7329bff6ee996d8df6cf810a9c2e59631ad5a2fb", package = "real_tokio", features = ["full"] }
lazy_static = "1.5.0"

itertools = "0.14.0"

[features]
spider = []
default = []

full = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
]

fs = ["real_tokio/fs"]
io-util = ["real_tokio/io-util"]
io-std = ["real_tokio/io-std"]
macros = ["real_tokio/macros"]
net = ["real_tokio/net"]
parking_lot = ["real_tokio/parking_lot"]
process = ["real_tokio/process"]
rt = ["real_tokio/rt"]
rt-multi-thread = ["real_tokio/rt-multi-thread"]
signal = ["real_tokio/signal"]
sync = ["real_tokio/sync"]
time = ["real_tokio/time"]
test-util = ["real_tokio/test-util"]
tracing = ["real_tokio/tracing"]
bytes = ["real_tokio/bytes"]
libc = ["real_tokio/libc"]
memchr = ["real_tokio/memchr"]
mio = ["real_tokio/mio"]
num_cpus = ["real_tokio/num_cpus"]
signal-hook-registry = ["real_tokio/signal-hook-registry"]
socket2 = ["real_tokio/socket2"]
stats = ["real_tokio/stats"]
tokio-macros = ["real_tokio/tokio-macros"]